// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`animationFillMode renders 0 1`] = `
Array [
  .c0 {
  -webkit-animation-fill-mode: 0;
  animation-fill-mode: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-fill-mode: 0;
  animation-fill-mode: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-fill-mode: 0;
  animation-fill-mode: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-fill-mode: 0;
  animation-fill-mode: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`animationFillMode renders function 1`] = `
Array [
  .c0 {
  -webkit-animation-fill-mode: hasnot;
  animation-fill-mode: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-fill-mode: has;
  animation-fill-mode: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-fill-mode: hasnot;
  animation-fill-mode: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-fill-mode: has;
  animation-fill-mode: has;
}

<div
    className="c0"
  />,
]
`;

exports[`animationFillMode renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-animation-fill-mode: invalid.path.1;
  animation-fill-mode: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-fill-mode: invalid.path.1;
  animation-fill-mode: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-fill-mode: invalid.path.1;
  animation-fill-mode: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-fill-mode: invalid.path.1;
  animation-fill-mode: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`animationFillMode renders negative number 1`] = `
Array [
  .c0 {
  -webkit-animation-fill-mode: -54881;
  animation-fill-mode: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-fill-mode: -54881;
  animation-fill-mode: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-fill-mode: -42365;
  animation-fill-mode: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-fill-mode: -42365;
  animation-fill-mode: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`animationFillMode renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-animation-fill-mode: July;
    animation-fill-mode: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-fill-mode: August;
    animation-fill-mode: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-fill-mode: September;
    animation-fill-mode: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-animation-fill-mode: November;
    animation-fill-mode: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-animation-fill-mode: July;
    animation-fill-mode: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-fill-mode: August;
    animation-fill-mode: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-fill-mode: September;
    animation-fill-mode: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-animation-fill-mode: November;
    animation-fill-mode: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-fill-mode: May;
    animation-fill-mode: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-fill-mode: June;
    animation-fill-mode: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-fill-mode: April;
    animation-fill-mode: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-animation-fill-mode: November;
    animation-fill-mode: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-fill-mode: May;
    animation-fill-mode: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-fill-mode: June;
    animation-fill-mode: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-fill-mode: April;
    animation-fill-mode: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-animation-fill-mode: November;
    animation-fill-mode: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`animationFillMode renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-animation-fill-mode: July;
    animation-fill-mode: July;
  }
}

@media April {
  .c0 {
    -webkit-animation-fill-mode: August;
    animation-fill-mode: August;
  }
}

@media January {
  .c0 {
    -webkit-animation-fill-mode: September;
    animation-fill-mode: September;
  }
}

@media April {
  .c0 {
    -webkit-animation-fill-mode: November;
    animation-fill-mode: November;
  }
}

@media June {
  .c0 {
    -webkit-animation-fill-mode: August;
    animation-fill-mode: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-animation-fill-mode: July;
    animation-fill-mode: July;
  }
}

@media April {
  .c0 {
    -webkit-animation-fill-mode: August;
    animation-fill-mode: August;
  }
}

@media January {
  .c0 {
    -webkit-animation-fill-mode: September;
    animation-fill-mode: September;
  }
}

@media April {
  .c0 {
    -webkit-animation-fill-mode: November;
    animation-fill-mode: November;
  }
}

@media June {
  .c0 {
    -webkit-animation-fill-mode: August;
    animation-fill-mode: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-animation-fill-mode: January;
    animation-fill-mode: January;
  }
}

@media April {
  .c0 {
    -webkit-animation-fill-mode: December;
    animation-fill-mode: December;
  }
}

@media January {
  .c0 {
    -webkit-animation-fill-mode: April;
    animation-fill-mode: April;
  }
}

@media April {
  .c0 {
    -webkit-animation-fill-mode: May;
    animation-fill-mode: May;
  }
}

@media June {
  .c0 {
    -webkit-animation-fill-mode: June;
    animation-fill-mode: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-animation-fill-mode: January;
    animation-fill-mode: January;
  }
}

@media April {
  .c0 {
    -webkit-animation-fill-mode: December;
    animation-fill-mode: December;
  }
}

@media January {
  .c0 {
    -webkit-animation-fill-mode: April;
    animation-fill-mode: April;
  }
}

@media April {
  .c0 {
    -webkit-animation-fill-mode: May;
    animation-fill-mode: May;
  }
}

@media June {
  .c0 {
    -webkit-animation-fill-mode: June;
    animation-fill-mode: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`animationFillMode renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-animation-fill-mode: 54881;
  animation-fill-mode: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-fill-mode: 54881;
  animation-fill-mode: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-fill-mode: 42365;
  animation-fill-mode: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-fill-mode: 42365;
  animation-fill-mode: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`animationFillMode renders string 1`] = `
Array [
  .c0 {
  -webkit-animation-fill-mode: July;
  animation-fill-mode: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-fill-mode: July;
  animation-fill-mode: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-fill-mode: June;
  animation-fill-mode: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-fill-mode: June;
  animation-fill-mode: June;
}

<div
    className="c0"
  />,
]
`;

exports[`animationFillMode renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-animation-fill-mode: DarkSlateBlue;
  animation-fill-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-fill-mode: DarkSlateBlue;
  animation-fill-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-fill-mode: DarkSlateBlue;
  animation-fill-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-fill-mode: DarkSlateBlue;
  animation-fill-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
